fixed home name on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,6 @@ body  {
     /* background-color: #222; */
     background-color: #101010;
     font-family: 'Ubuntu';
-    /* color: #16334A; */
-    /* color: #61892f; */
     color: white;
 }
 
@@ -17,25 +15,14 @@ body  {
     /* font-size: 60px; */
     /* color: #CFFFB3; */
     color:#86c232; 
+    font-size: 73px;
     font-weight: bold; 
     text-align: left;
     display: flex;
     /* font-family: 'Archivo Narrow', sans-serif; */
     flex-direction: row;
 }
-.first{
-    font-size: 5rem;
-}
-.last{
-    font-size: 6rem;
-}
 
-/* h1{
-    text-align: center;
-    font-size: 60px;
-    color:   #86c232; 
-    font-weight: bold; 
-} */
 
 .navbar-light .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
@@ -165,29 +152,20 @@ body  {
 
 
 .main {
-    /* background: url("../images/temp_background.jpg") no-repeat center center; */
     background-color: #101010;
     /* background-color: #222; */
     /* background-color: #080808; */
     background-size: cover;
     height: 100vh;
     width: 100vw;
-    /* justify-content: center;
-    align-items: center; */
     display: table-cell;
     vertical-align: middle;
     /* text-align: left; */
     /* margin-left: auto; */
 }
-/* h2  {
-    font-size: 26px;
-} */
+
 
 .home-content{
-    /* display:inline-block;
-    text-align: left; 
-    margin-left: 10%; */
-
     display: flex;
     flex-direction: row;
 }
@@ -382,6 +360,17 @@ body  {
     }
 }
 
+@media screen and (max-width: 400px) {
+    #homeText {
+        font-size: 56px !important;
+        
+       
+    }
+    #homeHeight{
+        line-height: 62px !important;
+    }
+}
+
 
 .about-image{
     max-width: 200px;
@@ -440,22 +429,6 @@ body  {
 .resume-button:hover span{
     color:#101010;
 }
-
-
-
-/* .headshot {
-
-    padding-bottom: 20px;
-}
-.headshot img {
-    border-radius: 50%;
-    max-width: 250px;
-    border: 2px solid white;
-    margin-left: auto;
-    margin-right: auto;
-    
-} */
-
 
 .projects {
     padding-top: 50px;
@@ -612,33 +585,6 @@ body  {
     border-radius: 5px;
 }
 
-
-/* .project-image{
-
-}
-.project-image img{
-    width:550px;
-    height:350px;
-    border-radius: 5px;
-    -webkit-filter: brightness(50%);
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    -ms-transition: all 1s ease;
-    transition: all 1s ease;
-
-}
-  
-.project-image img:hover{
-    -webkit-filter: brightness(100%);
-}
-
-.pimg-cont{
-   
-    margin-right: auto;
-    position: relative;
-} */
-
 .mobile-projectTitle{
     font-size: 20px;
     font-weight: bolder;
@@ -781,69 +727,6 @@ body  {
     font-size: 12px;
 }
 
-
-
-/* .projectContents{
-    height:100%;
-    position: relative;
-    
-} */
-
-
-
-/* .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    background-color: #F9CAA5  ;
-} */
-/* .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
-} */
-/* .card-title {
-    text-align: center;
-    font-size: 18px;
-    font-weight: 600;
-} */
-
-/* img {
-    width:450px;
-    height:250px;
-} */
-
-/* .project-card{
-    margin-top:20px;
-    box-shadow: 0 4px 8px 0 rgba(255,255,255,0.1);
-    
-    transition: transform 0.2s;
-    border-radius: 5px;
-    
-    background-color: #D8D8D8;
-    color: #222629;
-    
-}
-.project-card:hover {
-    transform: scale(1.05)
-}
-.project-card .card-img-block {
-    width: 91%;
-    margin: 0 auto;
-    position: relative;
-    top: -20px;
-    
-}
-.project-card .card-img-block img{
-    border-radius:5px;
-    box-shadow:0 0 10px rgba(0,0,0,0.63);
-}
-.project-card h5{
-    font-weight:600;
-}
-.project-card p{
-    font-size:14px;
-    font-weight:300;
-} */
-
 .project-icons {
     font-size: 20px;
     text-align: center;
@@ -862,15 +745,6 @@ body  {
     font-size: 20px;
     padding-bottom: 20px;
     text-align: center;
-
-    /* added to make full screen */
-    /* margin-left: auto;
-    margin-right: auto;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
-    display: table-cell;
-    vertical-align: middle; */
 }
 
 .contact-icon {
@@ -955,21 +829,11 @@ transform: rotate(0deg);
 transition: .25s ease-in-out;
 }
 
-/* .animated-icon1 span {
-background: #e65100;
-} */
-
 .animated-hamburger span {
 background: #86c232;
 }
 
-/* .animated-icon3 span {
-background: #f3e5f5;
-} */
-
-
-
-/* Icon 3*/
+/* Icon */
 
 .animated-hamburger span:nth-child(1) {
 top: 0px;
@@ -1025,26 +889,3 @@ showLazyImg {
         opacity: 1; 
     } 
 }
-/* 
-.vertLine{
-    border-left: 2px solid ;
-    height: 1000px;
-    position: absolute;
-    left: 50%;
-    top: 0;   
-    margin-top: 40px;
-
-    border-top: 0;
-    border-bottom: 0;
-    border-image: linear-gradient(to bottom, rgba(16, 16, 16, 0) 0%, rgba(207, 255, 179, 1) 50%, rgba(16, 16, 16, 0) 100%);
-    border-image-slice: 1;
-} */
-/* 
-.img-timeline{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin-top: 50px;
-    width: 100%;
-}
- */
